# langchain-pdf-query

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py  main.py  pdf_processing.py  query_chain.py
backend/api/: __init__.py  routes.py
backend/core/: __init__.py  config.py  exceptions.py  logging_config.py
backend/models/: __init__.py
backend/prompts/: README.md  rag_default.yaml
backend/schemas/: __init__.py  request_response.py
backend/services/: __init__.py  pdf_service.py  retrieval_service.py  state.py
backend/vector/9ead7bdb-3d5f-40d2-ba66-bb0302511521/: index_metadata.pickle
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/components/: AnswerContent.vue
frontend/src/composables/: usePdfUpload.js
frontend/src/services/: apiService.js
frontend/src/views/: HomeView.vue
