[tool.poetry]
name = "pdf-query-app"
version = "0.1.0"
description = "Everything you need to know to get started with LangChain"
authors = ["bhancock_ai <brandon@brandonhancock.io>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.18.0"}
langchain-openai = "^0.1.8"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
chromadb = "^0.5.0"
rank_bm25 = "^0.2.2"
python-multipart = "^0.0.22"
python-dotenv = "^1.0.0"
pypdf = "^4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
